[package]
name = "songma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "songma"
path = "src/main.rs"


[dependencies]
songma_derive = {path = "../songma_derive"}
pandoc = "0.8.10"
pandoc_ast = "0.8.2"
itertools = "0.10.5"
indradb-lib = { version = "*", features = ["rocksdb-datastore"] }
serde = { version = "^1.0.57", features = ["derive"] }
serde_json = "^1.0.57"
byteorder = "^1.4.2"
lazy_static = "^1.4.0"
chrono = { version = "0.4.22", features = ["serde"] }
bincode = "^1.3.3"
tempfile = "^3.2.0"
uuid = { version = "^1.1.2", features = ["v1", "serde"] }
