[package]
name = "songma_derive"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
serde = { version = "^1.0.57", features = ["derive"] }
serde_json = "^1.0.57"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full","extra-traits"] }

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

